beacon/src/beacon/parse/signal.output
Terminals which are not used

   LINE
   INC
   DEC
   LSB
   RSB
   QUOTE
   POST_DEC
   POST_INC
   FUNCCALL
   '<'
   PRE_DEC
   PRE_INC
   FORM_TYPE


State 33 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: program
    2                 | error '\n'

    3 program: stmt_list
    4        | import
    5        | namespace_decl
    6        | function_define

    7 namespace_decl: NAMESPACE namespace_path namespace_body

    8 namespace_body: LCB namespace_member_decl_optional RCB

    9 namespace_member_decl: NAMESPACE namespace_path namespace_body
   10                      | class_decl
   11                      | interface_decl
   12                      | enum_decl

   13 namespace_member_decl_list: namespace_member_decl
   14                           | namespace_member_decl_list namespace_member_decl

   15 namespace_member_decl_optional: /* empty */
   16                               | namespace_member_decl_list

   17 namespace_path: IDENT
   18               | namespace_path DOT IDENT

   19 import: IMPORT STRING_LITERAL

   20 parameterized_typename: IDENT type_parameter_group

   21 type_parameter_group: /* empty */
   22                     | LT type_parameter_list GT

   23 type_parameter_list: type_parameter
   24                    | type_parameter_list COMMA type_parameter

   25 type_parameter: IDENT type_parameter_rule_list
   26               | IN IDENT type_parameter_rule_list
   27               | OUT IDENT type_parameter_rule_list

   28 type_parameter_rule_list: /* empty */
   29                         | LRB typename_list RRB

   30 class_decl: CLASS parameterized_typename LCB access_member_tree_opt RCB
   31           | CLASS parameterized_typename COLON typename_list LCB access_member_tree_opt RCB

   32 enum_decl: ENUM IDENT LCB ident_list RCB
   33          | ENUM IDENT LCB ident_list COMMA RCB

   34 interface_decl: INTERFACE parameterized_typename LCB access_member_tree_opt RCB
   35               | INTERFACE parameterized_typename COLON typename_list LCB access_member_tree_opt RCB

   36 access_member_tree_opt: /* empty */
   37                       | access_member_tree

   38 access_member_tree: access_member_list
   39                   | access_member_tree access_member_list

   40 access_member_list: access_level_T COLON member_define_list

   41 member_define_list: member_define
   42                   | member_define_list member_define

   43 member_define: constructor_define
   44              | method_define
   45              | field_define

   46 constructor_define: CTOR NEW LRB parameter_list RRB constructor_chain_optional scope_optional
   47                   | CTOR NEW LRB RRB constructor_chain_optional scope_optional

   48 constructor_chain: COLON constructor_chain_type_T LRB argument_list RRB
   49                  | COLON constructor_chain_type_T LRB RRB

   50 constructor_chain_type_T: SUPER
   51                         | THIS

   52 constructor_chain_optional: /* empty */
   53                           | constructor_chain

   54 function_define: DEF IDENT LRB parameter_list RRB ARROW typename_T scope_optional
   55                | DEF IDENT LRB RRB ARROW typename_T scope_optional

   56 method_define: modifier_type_T DEF IDENT type_parameter_group LRB parameter_list RRB ARROW typename_T scope_optional
   57              | modifier_type_T DEF IDENT type_parameter_group LRB RRB ARROW typename_T scope_optional

   58 field_define: modifier_type_T typename_T IDENT SEMI

   59 modifier_type_T: /* empty */
   60                | STATIC NATIVE
   61                | NATIVE STATIC
   62                | STATIC
   63                | NATIVE

   64 access_level_T: PUBLIC
   65               | PRIVATE
   66               | PROTECTED

   67 ident_list: IDENT
   68           | ident_list COMMA IDENT

   69 parameter_list: typename_T IDENT
   70               | parameter_list COMMA typename_T IDENT

   71 argument_list: expression
   72              | argument_list COMMA expression

   73 typename_group: /* empty */
   74               | LT typename_list GT

   75 typename_list: typename_T
   76              | typename_list COMMA typename_T

   77 typename_T: fqcn_part typename_group

   78 fqcn_part: IDENT
   79          | fqcn_part COLO_COLO IDENT

   80 expression: LRB expression RRB
   81           | expression_nobrace

   82 expression_nobrace: primary
   83                   | ADD expression
   84                   | SUB expression
   85                   | expression ADD expression
   86                   | expression SUB expression
   87                   | expression MUL expression
   88                   | expression DIV expression
   89                   | expression MOD expression
   90                   | expression BIT_OR expression
   91                   | expression EQUAL expression
   92                   | expression NOTEQUAL expression
   93                   | expression BIT_AND expression
   94                   | expression EXC_OR expression
   95                   | expression LOGIC_OR expression
   96                   | expression LOGIC_AND expression
   97                   | expression ASSIGN expression
   98                   | expression ADD_ASSIGN expression
   99                   | expression SUB_ASSIGN expression
  100                   | expression MUL_ASSIGN expression
  101                   | expression DIV_ASSIGN expression
  102                   | expression MOD_ASSIGN expression
  103                   | expression AND_ASSIGN expression
  104                   | expression OR_ASSIGN expression
  105                   | expression EXC_OR_ASSIGN expression
  106                   | expression LSHIFT_ASSIGN expression
  107                   | expression RSHIFT_ASSIGN expression
  108                   | expression GT expression
  109                   | expression GE expression
  110                   | expression LT expression
  111                   | expression LE expression
  112                   | expression LSHIFT expression
  113                   | expression RSHIFT expression
  114                   | expression DOT IDENT typename_group
  115                   | expression AS typename_T
  116                   | CHILDA expression
  117                   | NOT expression
  118                   | expression_nobrace LRB argument_list RRB
  119                   | expression_nobrace LRB RRB
  120                   | NEW typename_T LRB argument_list RRB
  121                   | NEW typename_T LRB RRB

  122 primary: INT
  123        | DOUBLE
  124        | CHAR_LITERAL
  125        | STRING_LITERAL
  126        | TRUE_TOK
  127        | FALSE_TOK
  128        | NULL_TOK
  129        | fqcn_part typename_group

  130 stmt_list: stmt
  131          | stmt_list stmt

  132 stmt: expression stmt_term
  133     | variable_decl_stmt
  134     | variable_init_stmt
  135     | inferenced_type_init_stmt
  136     | if_stmt
  137     | while_stmt
  138     | break_stmt
  139     | continue_stmt
  140     | return_stmt
  141     | throw_stmt
  142     | try_stmt

  143 variable_decl_stmt: typename_T IDENT SEMI

  144 variable_init_stmt: typename_T IDENT ASSIGN expression stmt_term

  145 inferenced_type_init_stmt: VAR IDENT ASSIGN expression stmt_term

  146 if_stmt: IF LRB expression RRB scope
  147        | IF LRB expression RRB scope ELSE scope
  148        | IF LRB expression RRB scope elif_list
  149        | IF LRB expression RRB scope elif_list ELSE scope

  150 elif_list: elif
  151          | elif_list elif

  152 elif: ELIF LRB expression RRB scope

  153 while_stmt: WHILE LRB expression RRB scope_optional

  154 break_stmt: BREAK stmt_term

  155 continue_stmt: CONTINUE stmt_term

  156 return_stmt: RETURN expression stmt_term

  157 throw_stmt: THROW expression stmt_term

  158 try_stmt: TRY scope catch_stmt_list

  159 catch_stmt_list: catch_stmt
  160                | catch_stmt_list catch_stmt

  161 catch_stmt: CATCH LRB typename_T IDENT RRB scope

  162 scope: LCB stmt_list RCB
  163      | LCB RCB

  164 scope_optional: SEMI
  165               | scope

  166 stmt_term: SEMI
  167          | '\n'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 167
'<' (60)
error (256) 2
CHAR_LITERAL (258) 124
STRING_LITERAL (259) 19 125
INT (260) 122
DOUBLE (261) 123
IDENT (262) 17 18 20 25 26 27 32 33 54 55 56 57 58 67 68 69 70 78 79
    114 143 144 145 161
DOT (263) 18 114
COMMA (264) 24 33 68 70 72 76
COLON (265) 31 35 40 48 49
COLO_COLO (266) 79
LINE (267)
ADD (268) 83 85
SUB (269) 84 86
MUL (270) 87
DIV (271) 88
MOD (272) 89
NOT (273) 117
LSHIFT (274) 112
RSHIFT (275) 113
CHILDA (276) 116
EQUAL (277) 91
NOTEQUAL (278) 92
GT (279) 22 74 108
GE (280) 109
LT (281) 22 74 110
LE (282) 111
BIT_AND (283) 93
LOGIC_AND (284) 96
BIT_OR (285) 90
LOGIC_OR (286) 95
ASSIGN (287) 97 144 145
ADD_ASSIGN (288) 98
SUB_ASSIGN (289) 99
MUL_ASSIGN (290) 100
DIV_ASSIGN (291) 101
MOD_ASSIGN (292) 102
AND_ASSIGN (293) 103
OR_ASSIGN (294) 104
LSHIFT_ASSIGN (295) 106
RSHIFT_ASSIGN (296) 107
EXC_OR_ASSIGN (297) 105
INC (298)
DEC (299)
EXC_OR (300) 94
LCB (301) 8 30 31 32 33 34 35 162 163
RCB (302) 8 30 31 32 33 34 35 162 163
LRB (303) 29 46 47 48 49 54 55 56 57 80 118 119 120 121 146 147 148
    149 152 153 161
RRB (304) 29 46 47 48 49 54 55 56 57 80 118 119 120 121 146 147 148
    149 152 153 161
LSB (305)
RSB (306)
SEMI (307) 58 143 164 166
IMPORT (308) 19
VAR (309) 145
THIS (310) 51
SUPER (311) 50
TRUE_TOK (312) 126
FALSE_TOK (313) 127
NULL_TOK (314) 128
AS (315) 115
INTERFACE (316) 34 35
CLASS (317) 30 31
ENUM (318) 32 33
PUBLIC (319) 64
PRIVATE (320) 65
PROTECTED (321) 66
STATIC (322) 60 61 62
NATIVE (323) 60 61 63
NEW (324) 46 47 120 121
IN (325) 26
OUT (326) 27
CTOR (327) 46 47
DEF (328) 54 55 56 57
ARROW (329) 54 55 56 57
NAMESPACE (330) 7 9
RETURN (331) 156
IF (332) 146 147 148 149
ELIF (333) 152
ELSE (334) 147 149
WHILE (335) 153
BREAK (336) 154
CONTINUE (337) 155
TRY (338) 158
CATCH (339) 161
THROW (340) 157
QUOTE (341)
POST_DEC (342)
POST_INC (343)
FUNCCALL (344)
POSITIVE (345)
NEGATIVE (346)
PRE_DEC (347)
PRE_INC (348)
FORM_TYPE (349)


Nonterminals, with rules where they appear

$accept (97)
    on left: 0
compilation_unit (98)
    on left: 1 2, on right: 0
program (99)
    on left: 3 4 5 6, on right: 1
namespace_decl (100)
    on left: 7, on right: 5
namespace_body (101)
    on left: 8, on right: 7 9
namespace_member_decl (102)
    on left: 9 10 11 12, on right: 13 14
namespace_member_decl_list (103)
    on left: 13 14, on right: 14 16
namespace_member_decl_optional (104)
    on left: 15 16, on right: 8
namespace_path (105)
    on left: 17 18, on right: 7 9 18
import (106)
    on left: 19, on right: 4
parameterized_typename (107)
    on left: 20, on right: 30 31 34 35
type_parameter_group (108)
    on left: 21 22, on right: 20 56 57
type_parameter_list (109)
    on left: 23 24, on right: 22 24
type_parameter (110)
    on left: 25 26 27, on right: 23 24
type_parameter_rule_list (111)
    on left: 28 29, on right: 25 26 27
class_decl (112)
    on left: 30 31, on right: 10
enum_decl (113)
    on left: 32 33, on right: 12
interface_decl (114)
    on left: 34 35, on right: 11
access_member_tree_opt (115)
    on left: 36 37, on right: 30 31 34 35
access_member_tree (116)
    on left: 38 39, on right: 37 39
access_member_list (117)
    on left: 40, on right: 38 39
member_define_list (118)
    on left: 41 42, on right: 40 42
member_define (119)
    on left: 43 44 45, on right: 41 42
constructor_define (120)
    on left: 46 47, on right: 43
constructor_chain (121)
    on left: 48 49, on right: 53
constructor_chain_type_T (122)
    on left: 50 51, on right: 48 49
constructor_chain_optional (123)
    on left: 52 53, on right: 46 47
function_define (124)
    on left: 54 55, on right: 6
method_define (125)
    on left: 56 57, on right: 44
field_define (126)
    on left: 58, on right: 45
modifier_type_T (127)
    on left: 59 60 61 62 63, on right: 56 57 58
access_level_T (128)
    on left: 64 65 66, on right: 40
ident_list (129)
    on left: 67 68, on right: 32 33 68
parameter_list (130)
    on left: 69 70, on right: 46 54 56 70
argument_list (131)
    on left: 71 72, on right: 48 72 118 120
typename_group (132)
    on left: 73 74, on right: 77 114 129
typename_list (133)
    on left: 75 76, on right: 29 31 35 74 76
typename_T (134)
    on left: 77, on right: 54 55 56 57 58 69 70 75 76 115 120 121 143
    144 161
fqcn_part (135)
    on left: 78 79, on right: 77 79 129
expression (136)
    on left: 80 81, on right: 71 72 80 83 84 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117 132 144 145 146 147 148 149 152 153
    156 157
expression_nobrace (137)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 118 119 120 121, on right: 81 118 119
primary (138)
    on left: 122 123 124 125 126 127 128 129, on right: 82
stmt_list (139)
    on left: 130 131, on right: 3 131 162
stmt (140)
    on left: 132 133 134 135 136 137 138 139 140 141 142,
    on right: 130 131
variable_decl_stmt (141)
    on left: 143, on right: 133
variable_init_stmt (142)
    on left: 144, on right: 134
inferenced_type_init_stmt (143)
    on left: 145, on right: 135
if_stmt (144)
    on left: 146 147 148 149, on right: 136
elif_list (145)
    on left: 150 151, on right: 148 149 151
elif (146)
    on left: 152, on right: 150 151
while_stmt (147)
    on left: 153, on right: 137
break_stmt (148)
    on left: 154, on right: 138
continue_stmt (149)
    on left: 155, on right: 139
return_stmt (150)
    on left: 156, on right: 140
throw_stmt (151)
    on left: 157, on right: 141
try_stmt (152)
    on left: 158, on right: 142
catch_stmt_list (153)
    on left: 159 160, on right: 158 160
catch_stmt (154)
    on left: 161, on right: 159 160
scope (155)
    on left: 162 163, on right: 146 147 148 149 152 158 161 165
scope_optional (156)
    on left: 164 165, on right: 46 47 54 55 56 57 153
stmt_term (157)
    on left: 166 167, on right: 132 144 145 154 155 156 157


state 0

    0 $accept: . compilation_unit $end
    1 compilation_unit: . program
    2                 | . error '\n'
    3 program: . stmt_list
    4        | . import
    5        | . namespace_decl
    6        | . function_define
    7 namespace_decl: . NAMESPACE namespace_path namespace_body
   19 import: . IMPORT STRING_LITERAL
   54 function_define: . DEF IDENT LRB parameter_list RRB ARROW typename_T scope_optional
   55                | . DEF IDENT LRB RRB ARROW typename_T scope_optional
   77 typename_T: . fqcn_part typename_group
   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   84                   | . SUB expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  117                   | . NOT expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group
  130 stmt_list: . stmt
  131          | . stmt_list stmt
  132 stmt: . expression stmt_term
  133     | . variable_decl_stmt
  134     | . variable_init_stmt
  135     | . inferenced_type_init_stmt
  136     | . if_stmt
  137     | . while_stmt
  138     | . break_stmt
  139     | . continue_stmt
  140     | . return_stmt
  141     | . throw_stmt
  142     | . try_stmt
  143 variable_decl_stmt: . typename_T IDENT SEMI
  144 variable_init_stmt: . typename_T IDENT ASSIGN expression stmt_term
  145 inferenced_type_init_stmt: . VAR IDENT ASSIGN expression stmt_term
  146 if_stmt: . IF LRB expression RRB scope
  147        | . IF LRB expression RRB scope ELSE scope
  148        | . IF LRB expression RRB scope elif_list
  149        | . IF LRB expression RRB scope elif_list ELSE scope
  153 while_stmt: . WHILE LRB expression RRB scope_optional
  154 break_stmt: . BREAK stmt_term
  155 continue_stmt: . CONTINUE stmt_term
  156 return_stmt: . RETURN expression stmt_term
  157 throw_stmt: . THROW expression stmt_term
  158 try_stmt: . TRY scope catch_stmt_list

    error           shift, and go to state 1
    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    ADD             shift, and go to state 7
    SUB             shift, and go to state 8
    NOT             shift, and go to state 9
    CHILDA          shift, and go to state 10
    LRB             shift, and go to state 11
    IMPORT          shift, and go to state 12
    VAR             shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    DEF             shift, and go to state 18
    NAMESPACE       shift, and go to state 19
    RETURN          shift, and go to state 20
    IF              shift, and go to state 21
    WHILE           shift, and go to state 22
    BREAK           shift, and go to state 23
    CONTINUE        shift, and go to state 24
    TRY             shift, and go to state 25
    THROW           shift, and go to state 26

    compilation_unit           go to state 27
    program                    go to state 28
    namespace_decl             go to state 29
    import                     go to state 30
    function_define            go to state 31
    typename_T                 go to state 32
    fqcn_part                  go to state 33
    expression                 go to state 34
    expression_nobrace         go to state 35
    primary                    go to state 36
    stmt_list                  go to state 37
    stmt                       go to state 38
    variable_decl_stmt         go to state 39
    variable_init_stmt         go to state 40
    inferenced_type_init_stmt  go to state 41
    if_stmt                    go to state 42
    while_stmt                 go to state 43
    break_stmt                 go to state 44
    continue_stmt              go to state 45
    return_stmt                go to state 46
    throw_stmt                 go to state 47
    try_stmt                   go to state 48


state 1

    2 compilation_unit: error . '\n'

    '\n'  shift, and go to state 49


state 2

  124 primary: CHAR_LITERAL .

    $default  reduce using rule 124 (primary)


state 3

  125 primary: STRING_LITERAL .

    $default  reduce using rule 125 (primary)


state 4

  122 primary: INT .

    $default  reduce using rule 122 (primary)


state 5

  123 primary: DOUBLE .

    $default  reduce using rule 123 (primary)


state 6

   78 fqcn_part: IDENT .

    $default  reduce using rule 78 (fqcn_part)


state 7

   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   83                   | ADD . expression
   84                   | . SUB expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  117                   | . NOT expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    ADD             shift, and go to state 7
    SUB             shift, and go to state 8
    NOT             shift, and go to state 9
    CHILDA          shift, and go to state 10
    LRB             shift, and go to state 11
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17

    fqcn_part           go to state 50
    expression          go to state 51
    expression_nobrace  go to state 35
    primary             go to state 36


state 8

   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   84                   | . SUB expression
   84                   | SUB . expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  117                   | . NOT expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    ADD             shift, and go to state 7
    SUB             shift, and go to state 8
    NOT             shift, and go to state 9
    CHILDA          shift, and go to state 10
    LRB             shift, and go to state 11
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17

    fqcn_part           go to state 50
    expression          go to state 52
    expression_nobrace  go to state 35
    primary             go to state 36


state 9

   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   84                   | . SUB expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  117                   | . NOT expression
  117                   | NOT . expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    ADD             shift, and go to state 7
    SUB             shift, and go to state 8
    NOT             shift, and go to state 9
    CHILDA          shift, and go to state 10
    LRB             shift, and go to state 11
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17

    fqcn_part           go to state 50
    expression          go to state 53
    expression_nobrace  go to state 35
    primary             go to state 36


state 10

   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   84                   | . SUB expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  116                   | CHILDA . expression
  117                   | . NOT expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    ADD             shift, and go to state 7
    SUB             shift, and go to state 8
    NOT             shift, and go to state 9
    CHILDA          shift, and go to state 10
    LRB             shift, and go to state 11
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17

    fqcn_part           go to state 50
    expression          go to state 54
    expression_nobrace  go to state 35
    primary             go to state 36


state 11

   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . LRB expression RRB
   80           | LRB . expression RRB
   81           | . expression_nobrace
   82 expression_nobrace: . primary
   83                   | . ADD expression
   84                   | . SUB expression
   85                   | . expression ADD expression
   86                   | . expression SUB expression
   87                   | . expression MUL expression
   88                   | . expression DIV expression
   89                   | . expression MOD expression
   90                   | . expression BIT_OR expression
   91                   | . expression EQUAL expression
   92                   | . expression NOTEQUAL expression
   93                   | . expression BIT_AND expression
   94                   | . expression EXC_OR expression
   95                   | . expression LOGIC_OR expression
   96                   | . expression LOGIC_AND expression
   97                   | . expression ASSIGN expression
   98                   | . expression ADD_ASSIGN expression
   99                   | . expression SUB_ASSIGN expression
  100                   | . expression MUL_ASSIGN expression
  101                   | . expression DIV_ASSIGN expression
  102                   | . expression MOD_ASSIGN expression
  103                   | . expression AND_ASSIGN expression
  104                   | . expression OR_ASSIGN expression
  105                   | . expression EXC_OR_ASSIGN expression
  106                   | . expression LSHIFT_ASSIGN expression
  107                   | . expression RSHIFT_ASSIGN expression
  108                   | . expression GT expression
  109                   | . expression GE expression
  110                   | . expression LT expression
  111                   | . expression LE expression
  112                   | . expression LSHIFT expression
  113                   | . expression RSHIFT expression
  114                   | . expression DOT IDENT typename_group
  115                   | . expression AS typename_T
  116                   | . CHILDA expression
  117                   | . NOT expression
  118                   | . expression_nobrace LRB argument_list RRB
  119                   | . expression_nobrace LRB RRB
  120                   | . NEW typename_T LRB argument_list RRB
  121                   | . NEW typename_T LRB RRB
  122 primary: . INT
  123        | . DOUBLE
  124        | . CHAR_LITERAL
  125        | . STRING_LITERAL
  126        | . TRUE_TOK
  127        | . FALSE_TOK
  128        | . NULL_TOK
  129        | . fqcn_part typename_group
